add: auth and message tests api and fix swagger docs
